<resources>
    <string name="app_name">车邻邦商户</string>
    <string name="app_name_alias">车邻邦</string>
    <string name="i_known">我知道了</string>
    <string name="authorization_success">授权成功</string>
    <string name="authorization_fail">授权失败</string>
    <string name="please_grant_file_location_phone_correation_authority">请授予文件读写、定位及电话等相关的权限</string>
    <string name="digits_indentify_number">0123456789X</string>
    <string name="uploading_image">上传中…</string>
    <string name="upload_image_failed">上传失败，请重试一次</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hours">:</string>
    <string name="minutes"></string>
    <string name="get_info_failed">获取信息失败</string>
    <string name="request_failed">请求失败</string>
    <string name="loading_data_failed">数据加载失败</string>
    <string name="operate_failed_agen">操作失败，请重试一次</string>
    <string name="network_exception">网络异常</string>
    <string name="no_network_tips">网络未连接</string>
    <string name="RMB">￥</string>
    <string name="load_progress_tips">正在加载…</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中\u2026</string>
    <string name="has_load_all_label">已加载全部</string>
    <string name="input_company_name_text">请输入企业简称</string>
    <string name="input_phone_text">请输入手机号码</string>
    <string name="input_pwd_text">请输入您的密码</string>
    <string name="login_text">登录</string>
    <string name="forget_pwd_text">忘记密码?</string>
    <string name="register_text">注册</string>
    <string name="login_ing">正在登录…</string>
    <string name="register_company_title">合作商</string>
    <string name="company_short_text">企业简称</string>
    <string name="valid_code_text">验证码</string>
    <string name="get_check_btn_text">获取验证码</string>
    <string name="pwd_text">密码</string>
    <string name="pwd_confirm_text">确认密码</string>
    <string name="register_bottom_tips">点击“注册”代表本人已阅读并同意</string>
    <string name="text_protocal">《车邻邦合作商服务协议》</string>
    <string name="phone_not_empty_tips">手机号不能为空</string>
    <string name="error_phone_number_tips">手机号为11位数字</string>
    <string name="send_code_success">验证码已发送</string>
    <string name="btn_text_send_code_repeat">再次获取</string>
    <string name="time_tips">秒</string>
    <string name="company_empty_tips">企业简称不能为空</string>
    <string name="empty_phone">手机号不能为空</string>
    <string name="empty_password">密码不能为空</string>
    <string name="empty_code">验证码不能为空</string>
    <string name="different_pwd_tips">两次密码不一致</string>
    <string name="code_length_tips">验证码长度为6位</string>
    <string name="password_length_tips">密码长度至少为8位</string>
    <string name="error_password">密码为字母和数字的组合</string>
    <string name="register_success_tips">注册成功</string>
    <string name="service_protocol">服务协议</string>
    <string name="join_coop_bottom_tips">点击“加盟”代表本人已阅读并同意</string>
    <string name="find_password">找回密码</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_code">请输入验证码</string>
    <string name="text_get_code">获取验证</string>
    <string name="code_tips">验证码已以短信形式发送到您的手机中,请注意查收</string>
    <string name="repeat_get_text">再次获取</string>
    <string name="second_text">秒</string>
    <string name="reset_pwd">重置密码</string>
    <string name="reset_tips">需要数字 字母或符号</string>
    <string name="failed_code">发送验证码失败</string>
    <string name="reset_failed">重置密码失败</string>
    <string name="reset_success">重置密码成功</string>
    <string name="ok_tips">确认</string>
    <string name="modify_pwd">修改密码</string>
    <string name="input_old_pwd">请输入旧密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="old_empty_tips">旧密码不能为空</string>
    <string name="new_empty_tips">新密码不能为空</string>
    <string name="old_length_tips">旧密码长度不能小于6位</string>
    <string name="new_length_tips">新密码长度不能小于8位</string>
    <string name="modify_pwd_success">修改密码成功</string>
    <string name="modify_pwd_failed">修改密码失败</string>
    <string name="old_pwd_error_tips">原密码错误</string>
    <string name="old_error_password">旧密码必须为数字和字母的组合</string>
    <string name="new_error_password">新密码必须为数字和字母的组合</string>
    <string name="submit">提交</string>
    <string name="cooperative_title">合作商加盟</string>
    <string name="company_title">公司信息</string>
    <string name="company_register_name">营业执照的工商注册名称</string>
    <string name="company_number">营业执照号</string>
    <string name="name_text">法人姓名</string>
    <string name="card_number_text">法人身份证号</string>
    <string name="upload_company_photo">上传营业执照副本</string>
    <string name="card_photo_text">法人身份证正面照</string>
    <string name="card_photo">示例图</string>
    <string name="next_btn_text">下一步</string>
    <string name="uninstalled_sdcard">尚未安装SD卡</string>
    <string name="upload_failed_tips">上传失败</string>
    <string name="company_not_empty_tips">注册名称不能为空</string>
    <string name="company_number_empty_tips">请输入正确的营业执照号</string>
    <string name="name_empty_tips">姓名不能为空</string>
    <string name="card_number_tips">请输入正确的身份证号</string>
    <string name="bussiness_pic_no_upload">营业执照图片尚未上传</string>
    <string name="card_number_pic_no_upload">身份证图片尚未上传</string>
    <string name="shop_address_text">商户位置</string>
    <string name="hint_text_address_name">请输入地名</string>
    <string name="search_text">搜索</string>
    <string name="sure_btn_text">确认</string>
    <string name="pay_info_text">发票信息</string>
    <string name="pay_title_text">发票抬头</string>
    <string name="tax_number_text">纳税识别号</string>
    <string name="mail_code_text">邮政编码</string>
    <string name="address_info">地址</string>
    <string name="mail_address_tips">请填写发票邮寄地址</string>
    <string name="contact_name_text">联系人姓名</string>
    <string name="contact_phone_text">联系人电话</string>
    <string name="join_text">加盟</string>
    <string name="no_result_tips">未搜索到结果</string>
    <string name="check_tips_title">提交成功</string>
    <string name="check_tips_content">恭喜您资料提交成功，我们将会在一个工作日内审核信息并以短信的形式告知结果，请注意查收！</string>
    <string name="invoice_header_content">发票抬头内容不能为空</string>
    <string name="taxIdNo_tips">纳税识别号不能为空</string>
    <string name="postcode_tips">邮政编码不能为空</string>
    <string name="mail_address_empty_tips">邮寄地址不能为空</string>
    <string name="contact_name_tips">联系人姓名不能为空</string>
    <string name="contact_phone_tips">联系人电话不能为空</string>
    <string name="choose_province">请选省份</string>
    <string name="choose_city">请选择市</string>
    <string name="choose_area">请选择区</string>
    <string name="unfinished_order_tips">有%1$d个未完成订单</string>
    <string name="order_info">订单信息</string>
    <string name="sample_image">订单图片</string>
    <string name="please_edit_remark">请填写备注(请填写本车的提成，最多200字)</string>
    <string name="work_time">预约施工时间</string>
    <string name="select_work_item">选择施工项目</string>
    <string name="work_item">施工项目</string>
    <string name="skill_item_1">隔热膜</string>
    <string name="skill_item_2">隐形车衣</string>
    <string name="skill_item_3">车身改色</string>
    <string name="skill_item_4">美容清洁</string>
    <string name="release_order">一键下单</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="not_later_current_time">不能早于当前时间</string>
    <string name="please_upload_order_photo">请上传订单照片</string>
    <string name="required_work_time">预约施工时间不能为空</string>
    <string name="agreedEndTime_str">最迟交车时间不能为空</string>
    <string name="please_order_type">请选择订单类型</string>
    <string name="submiting">正在处理…</string>
    <string name="release_order_failed_again">下单失败，请重试一次</string>
    <string name="release_order_done">下单成功！</string>
    <string name="unfinish_order">未完成订单</string>
    <string name="order_num">订单编号：%1$s</string>
    <string name="license_num">车牌号：%1$s</string>
    <string name="vin_num">车架号：%1$s</string>
    <string name="no_receive">未接单</string>
    <string name="received">已接单</string>
    <string name="order_time">预约开始时间 %1$s</string>
    <string name="remark">备注： %1$s</string>
    <string name="create_time">订单创建时间：</string>
    <string name="order_number_text">订单数</string>
    <string name="order_time1">预约施工时间：%1$s</string>
    <string name="cooperater">合作商</string>
    <string name="my_order">我的订单</string>
    <string name="cooperative_shops">合作商加盟</string>
    <string name="salseman_manage">业务员管理</string>
    <string name="modify_password">修改密码</string>
    <string name="service_phone_number">车邻邦专职客服电话</string>
    <string name="logout">退出登录</string>
    <string name="uncomment_order">待评价</string>
    <string name="all_order">全部</string>
    <string name="order_count">订单数 %1$s</string>
    <string name="phone_4001871500">4001871500</string>
    <string name="phone_18201306715">18201306715</string>
    <string name="call">呼叫</string>
    <string name="cancel_call">取消</string>
    <string name="commented">已评价</string>
    <string name="uncomment">去评价</string>
    <string name="uncomment1">待评价</string>
    <string name="timeouted">已超时</string>
    <string name="timeouted_order">该订单已超时</string>
    <string name="comment_order">该订单已评价</string>
    <string name="order_infomation">订单详情</string>
    <string name="order_remark">下单备注： </string>
    <string name="license_num1">车牌号： </string>
    <string name="vin_num1">车架号： </string>
    <string name="order_create_time">下单时间： </string>
    <string name="tech_info">技师信息</string>
    <string name="comment">评价</string>
    <string name="comment_technician">评价技师</string>
    <string name="comment_item1">准时到达</string>
    <string name="comment_item2">准时完工</string>
    <string name="comment_item3">技术专业</string>
    <string name="comment_item4">着装整洁</string>
    <string name="comment_item5">车辆保护超级棒</string>
    <string name="comment_item6">态度好</string>
    <string name="other_comment_tips">其他意见和建议（最多200字）</string>
    <string name="submiting_comment">正在提交评价...</string>
    <string name="submit_comment_failed_please_again">提交失败，请重试一次</string>
    <string name="share_tips">感谢您对本次技师提交的评价，赶快\n分享赢现金红包吧！</string>
    <string name="add_salseman">新增</string>
    <string name="dimission">离职</string>
    <string name="fired">已离职</string>
    <string name="manager">管理员</string>
    <string name="saleman">业务员</string>
    <string name="input_name">请输入姓名</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="add_saleman_tips">业务员初始密码为123456</string>
    <string name="add_saleman_success">添加成功</string>
    <string name="notifycation_list_srt">通知列表</string>
    <string name="cooperation_status">加盟状态：</string>
    <string name="check_success">审核成功</string>
    <string name="checking">正在审核</string>
    <string name="check_failed">失败</string>
    <string name="failure_cause">失败原因：</string>
    <string name="cooperation_info">加盟信息</string>
    <string name="business_license_name">营业执照名：</string>
    <string name="business_license_serial">营业执照号：</string>
    <string name="licensee_name">法人的姓名：</string>
    <string name="licensee_ID">法人身份证：</string>
    <string name="business_license_photo_title">营业执照副本</string>
    <string name="order_finished_dialog_tips">编号为%1$s的订单已结束工作，请您对此次工作的技师做出评价。</string>
    <string name="immediation_comment">立即评价</string>
    <string name="notify">提醒</string>
    <string name="add_zhanghu">新增账户</string>
    <string name="code_1_s">编码：%1$s</string>
    <string name="model_1_s">型号：%1$s</string>
    <string name="brand_1_s">品牌：%1$s</string>
    <string name="project_1_s">施工项目：%1$s</string>
    <string name="position_1_s">施工部位：%1$s</string>
    <string name="working_hours_1_s">工时：%1$s</string>
    <string name="quality_time_1_s">质保期间：%1$s</string>
    <string name="check_info">查看详情</string>
    <string name="add_to_my_set_meal">添加至我的套餐</string>
</resources>