<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:background="@color/main_orange">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp35"
            android:layout_height="match_parent"
            android:padding="@dimen/dp10"
            android:src="@mipmap/default_back"
            android:scaleType="centerInside"
            android:clickable="true"
            android:focusable="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register_company_title"
            android:textSize="@dimen/sp18"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"
        android:layout_marginTop="@dimen/dp20"/>
    <EditText
        android:id="@+id/et_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/company_short_text"
        android:background="@android:color/white"
        android:paddingBottom="@dimen/dp15"
        android:paddingTop="@dimen/dp15"
        android:textColorHint="@color/lightgray"
        android:paddingLeft="@dimen/dp25"
        android:textSize="@dimen/sp15"
        android:textColor="@color/darkgray"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"
        android:layout_marginTop="@dimen/dp5"/>
    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_phone_text"
        android:background="@android:color/white"
        android:paddingBottom="@dimen/dp15"
        android:paddingTop="@dimen/dp15"
        android:textColorHint="@color/lightgray"
        android:paddingLeft="@dimen/dp25"
        android:maxLength="11"
        android:textSize="@dimen/sp15"
        android:textColor="@color/darkgray"
        android:inputType="number"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"
        android:layout_marginTop="@dimen/dp5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp25"
        android:paddingBottom="@dimen/dp10"
        android:paddingTop="@dimen/dp10"
        android:background="@android:color/white"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/valid_code_text"
            android:textColorHint="@color/lightgray"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:textSize="@dimen/sp15"
            android:textColor="@color/darkgray"/>
        <Button
            android:id="@+id/btn_send_code"
            android:layout_width="@dimen/dp65"
            android:layout_height="@dimen/dp25"
            android:layout_marginRight="@dimen/dp25"
            android:background="@drawable/check_btn"
            android:text="@string/get_check_btn_text"
            android:textSize="@dimen/sp12"
            android:textColor="@color/main_orange"
            android:gravity="center"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"
        android:layout_marginTop="@dimen/dp5"/>
    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pwd_text"
        android:background="@android:color/white"
        android:paddingBottom="@dimen/dp15"
        android:paddingTop="@dimen/dp15"
        android:textColorHint="@color/lightgray"
        android:paddingLeft="@dimen/dp25"
        android:textSize="@dimen/sp15"
        android:textColor="@color/darkgray"
        android:inputType="textPassword"
        android:maxLength="18"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"
        android:layout_marginTop="@dimen/dp5"/>
    <EditText
        android:id="@+id/et_confirm_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pwd_confirm_text"
        android:background="@android:color/white"
        android:paddingBottom="@dimen/dp15"
        android:paddingTop="@dimen/dp15"
        android:textColorHint="@color/lightgray"
        android:paddingLeft="@dimen/dp25"
        android:textSize="@dimen/sp15"
        android:textColor="@color/darkgray"
        android:inputType="textPassword"
        android:maxLength="18"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"/>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft ="@dimen/dp35"
        android:layout_marginRight="@dimen/dp35"
        android:paddingTop="@dimen/dp12"
        android:paddingBottom="@dimen/dp12"
        android:gravity="center"
        android:textSize="@dimen/sp18"
        android:background="@drawable/login_btn_selector"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/dp30"
        android:text="@string/register_text"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp10">
        <TextView
            android:id="@+id/tv_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="@dimen/sp10"
            android:text="@string/register_bottom_tips"
            android:textColor="@color/line_color"/>
        <TextView
            android:id="@+id/tv_protocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="@dimen/sp10"
            android:text="@string/text_protocal"
            android:textColor="@color/main_orange"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>


</LinearLayout>