<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/fillet_bg_shape"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:minHeight="@dimen/dp200"
    android:minWidth="@dimen/dp230">

    <ImageButton
        android:id="@+id/dialog_close"
        android:layout_width="@dimen/dp30"
        android:layout_height="@dimen/dp30"
        android:layout_marginTop="@dimen/dp5"
        android:layout_marginRight="@dimen/dp5"
        android:background="@null"
        android:src="@mipmap/iv_delete"
        android:scaleType="centerInside"
        android:layout_gravity="right"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:textSize="@dimen/sp15"
        android:textColor="@color/darkgray"
        android:text="@string/notify"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_A3"
        android:layout_marginTop="@dimen/dp15"
        android:layout_marginBottom="@dimen/dp15"/>

    <TextView
        android:id="@+id/order_finished_serial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:textSize="@dimen/sp13"
        android:textColor="@color/gray_A3"
        android:text="@string/order_finished_dialog_tips"/>

    <Button
        android:id="@+id/immediation_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp15"
        android:background="@drawable/login_btn_selector"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp15"
        android:layout_marginBottom="@dimen/dp15"
        android:paddingLeft="@dimen/dp10"
        android:paddingRight="@dimen/dp10"
        android:text="@string/immediation_comment"/>
</LinearLayout>